Update: V1.0.1; Fix collapse bug, new video

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -445,12 +445,17 @@ section > h2 {
     margin-bottom: var(--gap-4);
 }
 section > img {
+    --img-radius: var(--gap-3);
+    --img-border: var(--gap-3);
+
     max-width: 100%;
     width: min(100%, 768px);
     display: block;
     margin: 0 auto;
     background: var(--bg-color);
-    border-radius: 1rem;
+    border-radius: var(--img-radius);
+    -webkit-box-shadow: var(--img-border) var(--img-border) var(--color-deep-blue);
+    box-shadow: var(--img-border) var(--img-border) var(--color-deep-blue);
 }
 
 .titles {
@@ -516,7 +521,6 @@ i {
     -webkit-box-shadow: var(--card-border) var(--card-border) var(--color-deep-blue);
     box-shadow: var(--card-border) var(--card-border) var(--color-deep-blue);
     transition: all var(--trans-duration) ease-in-out;
-    
 }
 .card > *:first-child {
     --img-radius: calc(var(--card-radius) - var(--card-border));
